# ProjectOrganzier

./: CHANGELOG.md  Cargo.toml  README.md  RELEASE.md  cliff.toml  migrations.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: codecov.yml  release-pr.yml
src/: cli.rs  config.rs  database.rs  error.rs  main.rs  project.rs  template.rs
src/commands/: add.rs  config.rs  list.rs  mod.rs  new.rs  reset.rs
src/utils/: mod.rs
tests/templates/: file_3.txt  template.yaml
tests/templates/template_dir/: file_1.txt  file_2.txt
tests/templates/template_dir_expected/: file.txt  file_2.txt
