[package]
authors     = ["Luke Eltiste"]
description = "A CLI Project Manager to create and manage directories for all of your projects"
edition     = "2021"
license     = "MIT"
name        = "ProjectOrganzier"
readme      = "README.md"
repository  = "https://github.com/Frazzer951/fpm"
version     = "0.1.0"

[dependencies]
clap           = { version = "4.0", features = ["cargo"] }
console        = "0.15"
dialoguer      = "0.10"
dirs           = "4.0"
eyre           = "0.6"
fpm-lib        = { path = "../fpm-lib", version = "^0.6" }
fs-err         = "2.9.0"
indicatif      = "0.17"
prettytable-rs = "0.10"
serde          = { version = "1.0", features = ["derive"] }
serde_json     = "1.0"
thiserror      = "1.0"
toml           = "0.7"
turbosql       = "0.7"

[dev-dependencies]
anyhow = "1.0"
diff   = "0.1"

[package.metadata.release]
shared-version = true
