[package]
authors     = ["Luke Eltiste"]
description = "A CLI Project Manager to create and manage directories for all of your projects"
edition     = "2021"
license     = "MIT"
name        = "project_organzier"
readme      = "README.md"
repository  = "https://github.com/Frazzer951/fpm"
version     = "0.1.0"

[dependencies]
clap           = { version = "4.0", features = ["cargo"] }
console        = "0.15"
dialoguer      = "0.10"
dirs           = "5.0"
eyre           = "0.6"
fs-err         = "2.9.0"
indicatif      = "0.17"
prettytable-rs = "0.10"
serde          = { version = "1.0", features = ["derive"] }
serde_json     = "1.0"
thiserror      = "1.0"
toml           = "0.7"
turbosql       = "0.8"

[dev-dependencies]
anyhow = "1.0"
diff   = "0.1"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto      = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.4"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
